# drMD

./: .gitignore  .pypirc  FMN.pka  LICENSE  MANIFEST.in  README.md  ROADMAP.txt  analysis_config.yaml  analysis_drMD.py  batch_config.yaml  batch_drMD.py  check_up_drMD.py  cleanup_drMD.py  config.yaml  configTriageLog  constraints_drMD.py  drAnalysis.py  drMD.py  drMDUtils.py  em_config.yaml  fix_vitals_test.py  make_params.py  merge_dcd_test.py  mert_config.yaml  module_drAnalysis.py  module_drCheckup.py  module_drCleanup.py  module_drConstraints.py  module_drOperator.py  module_drPlot.py  module_drPrep.py  module_drSim.py  module_pdbUtils.py  module_structure.md  noLig.yaml  pdbUtils.py  prep_drMD.py  pyproject.toml  requirements.txt  setup.py  (+3 more)
01_inputs/: 4a29_FMN_1.pka  4a29_FMN_1.propka_input  FAD.frcmod  FAD.mol2  PLM.mol2  logging.txt
ExaminationRoom/: ROADMAP.txt  drCheckup.py  drCleanup.py  drClusterizer.py  drLogger.py
Prescriptions/: MERT_WPC_config.yaml  PETase_DUMMY.yaml  PETase_MD_config.yaml  PETase_Meta_config.yaml  config.yaml  cvFAP_config.yaml  em_config.yaml  em_nvt_config.yaml  metadynamics_config.yaml  pd_proj_conf.yaml  short_config.yaml  standard_MD_config.yaml  the_worlds_worst_config.yaml
Surgery/: drFirstAid.py  drMeta.py  drOperator.py  drPrep.py  drRestraints.py  drSim.py
Triage/: drConfigTriage.py  drConfigTriage_new.py  drConfigWriter.py  drPdbTriage.py
UtilitiesCloset/: drListInitiator.py  drMethodsWriter.py  drSelector.py  drSplash.py
deltaprot_configs/: batch_config.yaml  batch_config_worst_score.yaml
drMD.egg-info/: PKG-INFO  (+3 more)
(+159 files in other folders)
