[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drMD"
version = "0.0.1"
description = "drMD: Molecular Dynamics for Protein Scientists"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dr Eugene Shrimpton-Phoenix", email = "eshrimpt@ed.ac.uk"}
]
urls = { "Homepage" = "https://github.com/ESPhoenix/drMD" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pyyaml",
    "argparse",
    "pandas",
    "mdtraj",
    "numpy",
    "matplotlib",
    "weasyprint",
    "scipy",
    "tqdm",
    "pdbutils",
    "scikit-learn",
    "propka",
    "mdanalysis"
]
